-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.1
-
Windows 7
When transferring a time from Qt to QML then it can end up being incorrect. This happens in the attached example when it gets 10:00 in the Sydney, Australia time zone. It skips over 10 to get to 11, but it would appear that the time offset is incorrect before it skips over to 11.
| For Gerrit Dashboard: QTBUG-54378 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 164737,10 | V4: Handle QTime->DateObject conversion better | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |