src/qml/jsruntime/qv4dateobject.cpp
@@ -639,6 +639,28 @@ Heap::DateObject::DateObject(const QDateTime &date)
     this->date = date.isValid() ? date.toMSecsSinceEpoch() : qt_qnan();
 }
 
+Heap::DateObject::DateObject(const QTime &time)
+{
+    if (!time.isValid()) {
+        date = qt_qnan();
+        return;
+    }
+
+    /* All programmers know that stuff starts at 0. Whatever that may mean in this context (and
+     * local timezone), it's before the epoch, so there is defenitely no DST problem. Specifically:
+     * you can't start with a date before the epoch, add some[*] hours, and end up with a date
+     * after. That's a problem for timezones where new year happens during DST, like
+     * Australia/Hobart, because we have to ignore DST before the epoch (but honor it after the
+     * epoch).
+     *
+     * [*] Well, when "some" is in the range 0-24. If you add something like 1M then this might
+     *     still happen.
+     */
+    static const double d = MakeDay(0, 0, 0);
+    double t = MakeTime(time.hour(), time.minute(), time.second(), time.msec());
+    date = TimeClip(UTC(MakeDate(d, t)));
+}
+
 QDateTime DateObject::toQDateTime() const
 {
     return ToDateTime(date(), Qt::LocalTime);
